# project_with_spdlog

./: CMakeLists.txt
include/project_with_spdlog/: lib.hpp
src/: CMakeLists.txt  lib.cpp
